Small changes to layout and ssh

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,7 +10,7 @@ html
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
     script(src='/tablesorter/dist/js/jquery.tablesorter.min.js')
     script(src='/tablesorter/dist/js/jquery.tablesorter.widgets.js')
-    script(src='http://listjs.com/no-cdn/list.js')
+    //script(src='http://listjs.com/no-cdn/list.js')
     style.
       .jumbotron {
       background-color: #00285E;
